assets/src/css/screen.scss
html {
	cursor: url(../../images/pointinghand.svg) 4 4, url(../../images/pointinghand.png) 4 4, default;
	scroll-behavior: smooth;
}

a,
button,
[role="button"] {
	cursor: url(../../images/closedhand.svg) 4 4, url(../../images/closedhand.png) 4 4, pointer;
}

header {
	height: 5rem;
}

.wp-block-navigation__responsive-container {
	background-color: var(--wp--preset--color--base) !important;
	color: var(--wp--preset--color--contrast) !important;
}

.dm-header {
	width: 100%;
	z-index: 10;
	position: relative;
	top: 0;
	left: 01;
	right: 0;
	transition: all 0s ease;

	$nav-padding: 1.5rem;

	@media screen and (max-width: 600px) {

		.wp-block-navigation__responsive-container {
			padding: $nav-padding !important;
		}
	}

	&.slidedown.dm-header.slidedown {
		position: fixed;
		animation: slidedown 0.3s forwards;
		width: 90%;
		max-width: var(--wp--style--global--content-size);
		left: 0;
		right: 0;
		margin: 1rem auto !important;

		background: none !important;
		border: 1px solid var(--wp--preset--color--border-muted);
		border-top: 1px solid var(--wp--preset--color--highlight);
		border-radius: 1.5rem;
		box-shadow: var(--wp--preset--color--shadow);

		backdrop-filter: blur(10px);
		-webkit-backdrop-filter: blur(10px);

		@media screen and (max-width: 600px) {
			width: 100%;
			border: none;
			margin: 0 !important;
			border-radius: 0;

			.wp-block-navigation__responsive-container {
				width: calc(100vw - 2 * $nav-padding);
				height: calc(100vh - 2 * $nav-padding);
			}
		}
	}
}


@keyframes slidedown {

	from {
		top: -250px;
	}

	to {
		top: 0;
		box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
	}
}

main {
	padding: var(--wp--preset--spacing--40);
	margin: 0;
}

.dm-hero {

	/* background-color: var(--wp--preset--color--base); */

	.hero-name {
		font-style: normal;
		font-size: 6rem;
		line-height: 1.5;
		background-color: rgb(255, 153, 213);
		background-image: var(--wp--preset--gradient--hero-gradient);
		background-clip: text;
		color: transparent;
		background-size: 200% 100%;
		animation: 5s linear 0s infinite alternate none running rotateName;
	}
}

.wp-block-button__link,
.wp-block-read-more {
	position: relative;
	overflow: hidden;
	z-index: 1;
	transition: 0.5s;
	padding-left: 1rem !important;
	padding-right: 1rem !important;
	margin-left: 0 !important;
	margin-right: 0 !important;
}

.wp-block-button.wp-block-button__link.wp-element-button {
	margin: 0;
	padding: 0.5rem;
	padding-right: 2rem !important;
	display: flex;
	cursor: pointer;
	appearance: none;
	border-radius: 0.5rem;
	width: 100%;
	overflow: hidden;

	background-color: var(--wp--preset--color--base-light);
	color: var(--wp--preset--color--tertiery);
	border: 1px solid var(--wp--preset--color--tertiery);

	/* stylelint-disable-next-line function-url-quotes */
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='hsl(272 100% 50%)'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='m19.5 8.25-7.5 7.5-7.5-7.5' /%3E%3C/svg%3E");

	background-position: right 0.5rem center;
	background-size: 1.25em;
	background-repeat: no-repeat;
}

.wp-block-button__link:hover,
.wp-block-read-more:hover {
	color: var(--wp--preset--color--contrast);
	text-shadow: 0 0 20px var(--wp--preset--color--contrast);
}

@media (max-width: 600px) {

	.wp-block-query .wp-block-post .wp-block-group {
		flex-direction: column;
		width: 100%;
	}
}

.dm-projects {

	.wp-block-dm-project-plugin-project-block {
		background: var(--wp--preset--gradient--primary-gradient);
		border: 1px solid var(--wp--preset--color--border-muted);
		border-top: 1px solid var(--wp--preset--color--highlight);
		border-radius: 1rem;
		box-shadow: var(--wp--preset--color--shadow);

		.wp-block-media-text {
			gap: 1.5rem;
			padding: 2rem;
		}

		h3 {
			margin: 1.5rem 0;
			font-size: var(--wp--preset--font-size--extra-large);

			a {
				text-decoration: none;
			}
		}

		figure img {
			border-radius: 1rem;
		}

		.wp-block-button__link {
			margin: 0;
		}

		&:hover {
			background: var(--wp--preset--gradient--primary-gradient-hover);
		}
	}
}

.dm-blog {

	.wp-block-query {

		ul li {
			padding: 2rem;
			margin: 1.5rem;
			background: var(--wp--preset--gradient--primary-gradient);
			border: 1px solid var(--wp--preset--color--border-muted);
			border-top: 1px solid var(--wp--preset--color--highlight);
			border-radius: 1rem;
			box-shadow: var(--wp--preset--color--shadow);

			&:hover {
				background: var(--wp--preset--gradient--primary-gradient-hover);
			}
		}
	}

	.wp-block-read-more {
		width: calc(100% - 2 * 0.3rem - 2 * 1rem);
		margin: 0;
	}
}

@keyframes rotateName {

	0% {
		background-position: 0 0;
	}

	33% {
		background-position: 100% 0;
	}

	66% {
		background-position: 100% 100%;
	}

	100% {
		background-position: 0 100%;
	}
}


.wp-block-button__link span,
.wp-block-read-more span {
	position: absolute;
	width: 25%;
	height: 100%;
	background-color: var(--wp--preset--color--tertiery);
	transform: translateY(150%);
	border-radius: 50%;
	left: calc((var(--n) - 1) * 25%);
	transition: 0.5s;
	transition-delay: calc((var(--n) - 1) * 0.1s);
	z-index: -1;
}

.wp-block-button__link:hover span,
.wp-block-read-more:hover span {
	transform: translateY(0) scale(2);
}

.wp-block-button__link span:nth-child(1),
.wp-block-read-more span:nth-child(2) {
	--n: 1;
}

.wp-block-button__link span:nth-child(2),
.wp-block-read-more span:nth-child(3) {
	--n: 2;
}

.wp-block-button__link span:nth-child(3),
.wp-block-read-more span:nth-child(4) {
	--n: 3;
}

.wp-block-button__link span:nth-child(4),
.wp-block-read-more span:nth-child(5) {
	--n: 4;
}

.wp-block-comments {

	input,
	textarea {
		color: var(--wp--preset--color--contrast);
		background-color: var(--wp--preset--color--base-light);
		margin: 1rem auto;
		border-radius: 0.5rem;
		border: 1px solid var(--wp--preset--color--border) !important;
		outline: none;
	}

	input[type="checkbox"] {
		accent-color: var(--wp--preset--color--tertiery);
	}

	input[type="submit"] {
		padding: 0 1rem;
		color: var(--wp--preset--color--tertiery);

		&:hover {
			color: var(--wp--preset--color--contrast);
		}
	}
}

.wp-block-search__inside-wrapper {
	border: none;

	.wp-block-search__input {
		border-top-left-radius: 0.5rem;
		border-bottom-left-radius: 0.5rem;
	}

	.wp-block-search__button {
		border-top-right-radius: 0.5rem;
		border-bottom-right-radius: 0.5rem;
		margin: 0;
	}
}

.wp-block-cover.wp-block-cover__inner-container {

	.wp-block-button__link {
		margin: 0;
		padding: 0 1rem;
		background-color: var(--wp--preset--color--base-light);
	}
}

